--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">PPeople</string>
+    <string name="app_name">Hello</string>
     <string name="hello_world">Hello world!</string>
+    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ultricies hendrerit nisi ut efficitur. Nulla iaculis magna at tempus ornare. Duis egestas metus sed blandit sollicitudin. </string>
     <string name="action_settings">Settings</string>
     <string name="section_recent_label">Recent</string>
     <string name="section_favourite_label">Favourite</string>
@@ -13,5 +14,10 @@
     <string name="title_activity_contacts">Contacts</string>
     <string name="title_activity_me">Me</string>
     <string name="title_activity_dialer">dialer</string>
+    <string name="home_search_bar_text">type name of person or phone number</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_user_history">User_history</string>
+    <string name="title_activity_location">Location</string>
+    <string name="title_activity_create">Create</string>
 
 </resources>
